# ChangeLog for gnome-extra/evolution-ews
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-ews/ChangeLog,v 1.10 2013/04/14 19:06:00 pacho Exp $

*evolution-ews-3.8.1 (14 Apr 2013)

  14 Apr 2013; Pacho Ramos <pacho@gentoo.org> +evolution-ews-3.8.1.ebuild:
  Version bump

*evolution-ews-3.6.4 (31 Mar 2013)

  31 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org>
  +evolution-ews-3.6.4.ebuild:
  Version bump.

  29 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org>
  -evolution-ews-3.4.4.ebuild, -evolution-ews-3.6.1.ebuild:
  Clean up old revisions.

*evolution-ews-3.8.0 (28 Mar 2013)

  28 Mar 2013; Pacho Ramos <pacho@gentoo.org> +evolution-ews-3.8.0.ebuild:
  Version bump for Gnome 3.8

*evolution-ews-3.6.3 (22 Jan 2013)

  22 Jan 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  +evolution-ews-3.6.3.ebuild:
  Version bump.

  24 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  evolution-ews-3.4.4.ebuild, evolution-ews-3.6.1.ebuild:
  Depend on evolution-data-server with the same major/minor version (bug
  #448350).

  19 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  -evolution-ews-3.4.3.ebuild, +evolution-ews-3.6.1.ebuild,
  +files/evolution-ews-3.6.1-libm.patch:
  Version bump for gnome-3.6. Drop old.

*evolution-ews-3.6.1 (19 Dec 2012)

  19 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  -evolution-ews-3.4.3.ebuild, +evolution-ews-3.6.1.ebuild:
  Version bump for gnome-3.6. Drop old.

*evolution-ews-3.4.4 (13 Aug 2012)

  13 Aug 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  -evolution-ews-3.4.1.ebuild, +evolution-ews-3.4.4.ebuild:
  Version bump with various bugfixes; drop old.

*evolution-ews-3.4.3 (24 Jun 2012)

  24 Jun 2012; Nirbheek Chauhan <nirbheek@gentoo.org>
  +evolution-ews-3.4.3.ebuild:
  Bump to 3.4.3

*evolution-ews-3.4.1 (07 May 2012)

  07 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  +evolution-ews-3.4.1.ebuild, +metadata.xml: