@@ -2,20 +2,18 @@
 Hash: SHA256
 
 AUX evolution-ews-3.6.1-libm.patch 1431 SHA256 10fc2158597fbf111060315a4daa87741ebd8772bd93b1271e2fc0aee2895e5d SHA512 a7fcc0420c11d153ccdf85bac669e80a79f0e0cdb7906caf1b33a792837ae8db788208d6f9b48a463eb454a6c70472d58679b22f4559ad577927e238e4ae304a WHIRLPOOL 5065ee45ab45341b66b9b8720210e5bab00e49b76ab6f9950281cc6be7f18b27d504f9fa024910f17e0124dc3e489108e97e858ec94a5448e2400fd0053f53a5
-DIST evolution-ews-3.6.3.tar.xz 512880 SHA256 d044bf8f7753d9489d65a5b94b117cef1369d78c57810125fab229368d01fec6 SHA512 f9a223e48725db717f5f8bdadd5b65c206e9e129c485591bcb71d4bd83f6602e43af1422f83a74f6f5d0752808f226cefae2fdcfae9b68467e02ce78fd2b4e73 WHIRLPOOL 6d568d3b348427e168a15c7c68720009a5b6c3f15d9823d985a97067617a04d2ea2836f708bf33526ed9c60288d7c2832b3fca7107fc61bcf290fa4d0e935894
 DIST evolution-ews-3.6.4.tar.xz 513640 SHA256 d8777e3c5378b4f86e6191ed678554087e094a742eb72c92e1677957b3af89f1 SHA512 19e8f5b6610e30e85d130f9ddf1f61da53708848a9a7ff186d05dc285b4047118375e96c2b56e8f618e6494e01d840464dd7cf5a7f3a6aa739ef5d5d6c4f213e WHIRLPOOL 3f350e1a875c181aa1f6d936acd2745768709231da1b5068b70754fc9bf3736d9a516b4f696d8e373903b74498ec37b72eae372d2939a64fcfe82433175080e3
-DIST evolution-ews-3.8.0.tar.xz 513900 SHA256 740f75636c2942892ea3da44721ecd9b060ff32ce20075bb3e4ec0f6aa8fdd87 SHA512 84a7afc60de2b10b105f60e198250158763b6925cce3adb15b8c29f5b516a511c25c06411a3e5478e4340c9acc9b1fa24e6a5215242887fdc49705245bb5c024 WHIRLPOOL 6060e4621735f0746d71a7c791488593b8298b064cb836b445b6192c43327f27e1e1db805b19f75bc74b836f228be51deecfb1788e08626eebc4f3d36faf2142
 DIST evolution-ews-3.8.1.tar.xz 515340 SHA256 26fea90285189ee0e370ea04baef31bc0907d0cf400a63fafc95631111d378c9 SHA512 adb2f16a758a3c1d7a8013e9152aceae73f59f494e01d916cc66adcc985c0e702d7635c69853417eb2e95f3886aa8fc8bd3461a60ee5b68bd9d23bcca5a0ce31 WHIRLPOOL a11847333ec2f96d5fa7a94247f9bfa120445f3f2159e2789f7c4f5b6efd1d4f1ce67ac061dc549231e555f3a158f9c8af2281f0bbea87f79e8d21b72e25690e
-EBUILD evolution-ews-3.6.3.ebuild 1130 SHA256 80f04adc2a01ec29365c79ab0fa74f0845ee6586ed22d8cb27e32be957613d9e SHA512 5569d185b4ec191830f41fdc000020612cd2b953a2f5aaf11b7000bc20c5fd51bb8ce7c2815e828ba6ab6820d344e07685b051fc5bf5df85e07125ace7462240 WHIRLPOOL 17323c30a7e7dd5207ccae7832d1c604656b3d0005f9a58114961d5d768994215dcd548281df62fee9e15dc1836012efd6013f25137fd64616b46649adfdf5ae
+DIST evolution-ews-3.8.2.tar.xz 515972 SHA256 ff3586b76013f71b0c32339279985cb0e2e1706bd181726ce9d00ebf4387cdd9 SHA512 4bcc5ba67a81653642f1de6af41dd672503e1b003590ee5c6c8f2d608f629341236001cfdb81dff46026ef8c2edadc7a8a862f1414064b2465f0ab0531147eb8 WHIRLPOOL 7248d4daa8ebd68c33e7f27d1bbe96126ba1a8d08358d0ac79106fd0cc81f238832127b209778297fc7777875b4c3b0c84cc8af17e60a205ed9baeb84c691a13
 EBUILD evolution-ews-3.6.4.ebuild 1138 SHA256 0715de29f6627f2700298181a3bda4aacd6a570ea2fbcd082e06f579e26cbbb5 SHA512 aa5b96bd2fd9c91be2e3363d337737c37b44842d83f0e6a03bb6892ca8868e53c6dfad8a1d04ae04c79af724194eeec249403e5dcaec007c4ed2a2ed7a604f6d WHIRLPOOL 99b91dacefec49c1d58e93419e7640bdec06c43acd4ad26b3084017a1e8293744116b04efd9620b2cf0320a0dce54b146d2ba4152ec0bcc1be14420e78bdc7d8
-EBUILD evolution-ews-3.8.0.ebuild 1128 SHA256 26b1d255e1368e33d3331c90f1dd4d94acdead7b14c4515857e8ae16f54154e8 SHA512 0f3f2efeca290b06ad684f6e919d23026b49f317cbd673e011d0e2689d3d09d39d8c8cd013ad9cbf50c37398f8dd8f2cc02b4215cbcf371e2fa60597bcc84e3b WHIRLPOOL 4a0dd36ec401e026a43a17fe0f597a17474ab5fe3bf831ebd23f4e8eea332d2e4c74d2fceba01926c5361aaa79161cefb0ea2ed6a5657a84d967bfc5e1338fd9
 EBUILD evolution-ews-3.8.1.ebuild 1128 SHA256 b1e8b7b102a39d65abcb7b01137dbe06f2dd92f5220b7532143ec5ea83d30ac9 SHA512 e51ff525de3d51724d43f9162aa038881790cceb6c22232a6d462484da993512e5b2a12be7d449b604346f14a8d60870e5ae914af0b7e9cf43f64ad75fad211f WHIRLPOOL 5355882bdc1031642fa410461fd49b9f42aec60dbbb2fe527ab54c3fb1e4b84cc83b5cd206db2a648fc91d57d85cc36c9e7be6ac0462196a32c723c2a7c2a73a
-MISC ChangeLog 2083 SHA256 fc08cdedc66ba84f809a5fc397b998bf790c5ba76bd4c1f20a8b4b0cde28f383 SHA512 d6f7b2c5d5af064dde2d0a6c7f0ce61e0415d392f4a8ae56f6222ea20c2dafde758169fc5cd55ebadf522b4eb19eb55445895bdeecd60725a9ae019ef5936a7c WHIRLPOOL 43c50a315b54a73a5c193542a59a413528ba161bf757febcf510ba7c05fb778c40d6c7f778856725cd76b016eb7be7d79f4909bde4ae6c23f74ff3386868f234
+EBUILD evolution-ews-3.8.2.ebuild 1000 SHA256 3e2e0b0e60edf0adfa01bc6901e9d6308fd91e1fba034f3bf5de2d33102b6793 SHA512 4d89f33340af81930ffac96f91292835abf837f6ac0424fdf006276f2777728bb57cfeeabc729d9a440c1cad59bfc94ceb3067bab74a6943d0b336a0201b7468 WHIRLPOOL f57e6bf7f097635f72d431e5da4d4ee2c0314e752f7fa57850123f28e7833ce97ef1c5435ab617a1a5e8c66cfa912c298f365f6a72db850ecfa8b83519e2f4af
+MISC ChangeLog 2280 SHA256 fdaaad95edf7cfdf44c30d45ef992e905747f44568d2944a91a386d597925327 SHA512 df6529889a37d9fd013df62cfab5128676199108d20a07619f7774b355b4b5fa6ec168b5edfcf3869bfa67a7636dd7860b1ec821776a69e5a0d33bab9faa17a3 WHIRLPOOL 1a4e55341086b7d07e166a4e1d0a60247e70d2d68931e10e93fbc805c598d1c88df7548779b97287ecedd058b4bb367e923d43ae1e7f28d982722fccb36c807c
 MISC metadata.xml 158 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 SHA512 7fbfbd2b3ed1b81867d55648509f778fdbe2091af53727b3426a3c7f453ae7e1663a99fdd2101508b8d6c85b3158459c93551b77a6a394f02d7e11cbc8a5ecf4 WHIRLPOOL 4bcd5662974877d42ebc4361b6eb412bfeea2af7144b436ce7ed152327d554afc321c376625ba0bb85a704b70d86e3c4882dff3573047acddd8ffccf655d4f7e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlFq/hkACgkQCaWpQKGI+9TJhgCfa7YbsZO2HHE4X3reC6ZbTwbL
-jFwAn2pXnilvTmJmzzh1xrB5VobXofTg
-=gcS5
+iEYEAREIAAYFAlGPwoIACgkQCaWpQKGI+9QW0gCfaFkiMBkN/v6c1flPLnZbyUhX
+RcQAn2+Vy4wRrKVliVpMnVsNmXM7Sz5e
+=R3eH
 -----END PGP SIGNATURE-----
