@@ -1,6 +1,12 @@
 # ChangeLog for gnome-extra/evolution-ews
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-ews/ChangeLog,v 1.10 2013/04/14 19:06:00 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-ews/ChangeLog,v 1.11 2013/05/12 16:25:37 pacho Exp $
+
+*evolution-ews-3.8.2 (12 May 2013)
+
+  12 May 2013; Pacho Ramos <pacho@gentoo.org> +evolution-ews-3.8.2.ebuild,
+  -evolution-ews-3.6.3.ebuild, -evolution-ews-3.8.0.ebuild:
+  Version bump, drop old
 
 *evolution-ews-3.8.1 (14 Apr 2013)
 
